# SCA_DARK_STORES

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pritam_sess_summ.md  pyproject.toml  requirements.txt  session_summary_v3.md
data/: baseline_kpis.json
docs/: architecture.md  kmeans_vs_pmedian.md  pritam_sess_summ.md
notebooks/: 00_day1_summary.ipynb  00_summary.ipynb  01_data_pipeline.ipynb  01_exploratory_analysis.ipynb  02_clustering.ipynb  02_day2_distance_matrix.ipynb  02_demand_and_baseline.ipynb  02_distance_matrix.ipynb  03_dark_store_finalisation.ipynb  03_demand_forecasting.ipynb  03_forward_vrp.ipynb  03_return_ml.ipynb  03_route_parser_guide.ipynb  03_vrp_baseline_analysis.ipynb  04_05_joint_optimizer.ipynb  04_joint_optimizer.ipynb  04_resilience_analysis.ipynb  04_return_ml.ipynb  05_reverse_vrp.ipynb  05_solver_tuning_support.ipynb  vrp_summary.ipynb
report/: literature_positioning.docx  sensitivity_and_robustness_section.docx  sensitivity_report_section.docx
src/: all_zones_aggregator.py  clustering.py  data_pipeline.py  demand_baseline.py  demand_forecasting.py  exploratory_analysis.py  forward_vrp.py  haversine_matrix.py  joint_optimizer.py  ortools_toy_cvrptw.py  return_classifier.py  reverse_vrp.py  route_parser.py  scenario_analysis.py  scenario_builder.py  scenario_preparation.py
tests/: conftest.py  test_clustering.py  test_data_pipeline.py  test_demand_baseline.py  test_demand_forecasting.py  test_exploratory_analysis.py  test_forward_vrp.py  test_haversine_matrix.py  test_integration.py  test_joint_optimizer.py  test_main.py  (+3 more)
(+6 files in other folders)
