[project]
name = "sca-dark-stores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"numpy>=2.4.4",
	"pandas>=3.0.2",
	"jupyter>=1.1.1",
	"ipykernel>=7.2.0",
	"matplotlib>=3.10.8",
	"seaborn>=0.13.2",
	"scikit-learn>=1.8.0",
	"ortools>=9.15.6755",
	"pulp>=3.3.0",
	"geopandas>=1.1.3",
	"xgboost>=3.2.0",
	"prophet>=1.3.0",
	"shap>=0.51.0",
	"folium>=0.20.0",
]
