[project]
name = "sca-dark-stores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"numpy>=1.26",
	"pandas>=2.0",
	"jupyter>=1.1",
	"ipykernel>=7.0",
	"matplotlib>=3.8",
	"seaborn>=0.13",
	"scikit-learn>=1.3",
	"ortools>=9.8",
	"pulp>=2.7",
	"geopandas>=0.14",
	"xgboost>=2.0",
	"prophet>=1.1",
	"shap>=0.43",
	"folium>=0.15",
	"scipy>=1.11",
	"pyarrow==23.0.1",
	"plotly>=5.18",
	"python-docx>=1.1",
	"python-pptx>=0.6",
	"openpyxl>=3.1",
	"gdown>=5.2.1",
]
